--- a/src/NetTopologySuite.IO.Esri.Shapefile/NetTopologySuite.IO.Esri.Shapefile.csproj
+++ b/src/NetTopologySuite.IO.Esri.Shapefile/NetTopologySuite.IO.Esri.Shapefile.csproj
@@ -16,8 +16,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NetTopologySuite" Version="2.0.0" />
-    <PackageReference Include="NetTopologySuite.Features" Version="2.0.0" />
+    <PackageReference Include="NetTopologySuite" Version="2.4.0" />
+    <PackageReference Include="NetTopologySuite.Features" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
   </ItemGroup>
 
 
